--- a/serious_stuff/.gitignore
+++ b/serious_stuff/.gitignore
@@ -39,5 +39,8 @@ app.*.symbols
 # Obfuscation related
 app.*.map.json
 
+# Firebase related
+android/app/google-services.json
+
 # Exceptions to above rules.
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
