--- a/serious_stuff/pubspec.yaml
+++ b/serious_stuff/pubspec.yaml
@@ -23,6 +23,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: ^0.4.0+9
+
+  # Dependencies for the Firebase products
+  # Added database to test, can remove if not used
+  firebase_database: ^3.1.1
 
 
   # The following adds the Cupertino Icons font to your application.
