--- a/serious_stuff/android/app/src/main/AndroidManifest.xml
+++ b/serious_stuff/android/app/src/main/AndroidManifest.xml
@@ -43,5 +43,7 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="<add google api key>" />
     </application>
 </manifest>
